# eeprom-programmer

./: .gitmodules  README.md
pcb/v1/: .gitignore  eeprom-programmer-rounded.kicad_pcb  eeprom-programmer-rounded.kicad_prl  eeprom-programmer-rounded.kicad_pro  eeprom-programmer.kicad_pcb  eeprom-programmer.kicad_prl  eeprom-programmer.kicad_pro  eeprom-programmer.kicad_sch
pcb/v1/Components/: rp2040.kicad_sym  zif-28.kicad_sym
pcb/v1/Components/kao-logo.pretty/: kao-logo.kicad_mod
pcb/v1/Components/rp2040.pretty/: RP2040-QFN-56.kicad_mod
pcb/v1/bom/: ibom.html
pcb/v1/gerbers/: eeprom-programmer-B_Cu.gbr  eeprom-programmer-B_Mask.gbr  eeprom-programmer-B_Silkscreen.gbr  eeprom-programmer-Edge_Cuts.gbr  eeprom-programmer-F_Cu.gbr  eeprom-programmer-F_Mask.gbr  eeprom-programmer-F_Silkscreen.gbr  eeprom-programmer-NPTH.drl  eeprom-programmer-PTH.drl
pcb/v1/gerbers-rounded/: eeprom-programmer-rounded-B_Cu.gbr  eeprom-programmer-rounded-B_Mask.gbr  eeprom-programmer-rounded-B_Silkscreen.gbr  eeprom-programmer-rounded-Edge_Cuts.gbr  eeprom-programmer-rounded-F_Cu.gbr  eeprom-programmer-rounded-F_Mask.gbr  eeprom-programmer-rounded-F_Silkscreen.gbr  eeprom-programmer-rounded-NPTH.drl  eeprom-programmer-rounded-PTH.drl
soft/: CMakeLists.txt
soft/src/: main.c
